--- a/src/styles/shared/TopBar.module.css
+++ b/src/styles/shared/TopBar.module.css
@@ -33,8 +33,8 @@
 }
 
 .img {
-  width: 35px;
-  flex-shrink: 0;
+  width: 40px;
+  object-fit: cover;
   border-radius: 50px;
   aspect-ratio: 1/1;
 }
